--- a/index.html
+++ b/index.html
@@ -8,19 +8,28 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/addons/p5.sound.min.js"></script>
     <script src="p5.play.js"></script>
 
-    <script src="https://www.gstatic.com/firebasejs/6.3.4/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/6.3.0/firebase-database.js"></script>
+  <!-- The core Firebase JS SDK is always required and must be listed first -->
+<script src="https://www.gstatic.com/firebasejs/7.24.0/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/7.24.0/firebase-database.js"></script>
 
 
-    <script>
-      //Your web app's Firebase configuration
+<!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
 
-      // // Initialize Firebase
-      // firebase.initializeApp(firebaseConfig);
-
-    // Initialize Firebase
-    firebase.initializeApp(firebaseConfig);
-    </script>
+<script>
+  // Your web app's Firebase configuration
+  var firebaseConfig = {
+    apiKey: "AIzaSyBE5mTRGU6ZtejOtaFkSPSeUsDHIlonw8k",
+    authDomain: "multiplayer-car-racing-g-2cb42.firebaseapp.com",
+    databaseURL: "https://multiplayer-car-racing-g-2cb42.firebaseio.com",
+    projectId: "multiplayer-car-racing-g-2cb42",
+    storageBucket: "multiplayer-car-racing-g-2cb42.appspot.com",
+    messagingSenderId: "253805325792",
+    appId: "1:253805325792:web:10a8131d201395832c8f85"
+  };
+  // Initialize Firebase
+  firebase.initializeApp(firebaseConfig);
+</script>
 
     <script src="js/Player.js"></script>
     <script src="js/Form.js"></script>
